force-app/main/default/objects/OpportunityLineItem/fields/ON_BillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>ON_BillingPeriod__c</fullName>
    <description>Defines the time interval (in days, months or years) after which the item is considered in the invoice run.</description>
    <inlineHelpText>Defines the time interval (in days, months or years) after which the item is considered in the invoice run.</inlineHelpText>
    <label>JustOn: Billing Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>