force-app/main/default/objects/OpportunityLineItem/fields/ON_BillingType__c.field-meta.xml
<CustomField>
    <fullName>ON_BillingType__c</fullName>
    <description>Specifies the billing behavior. Supported values for recurring items include Recurring or Recurring Prorated.</description>
    <formula>IF (Opportunity.Recurring_Invoice__c = true, &apos;Recurring&apos;, 
&apos;One-Time&apos;)</formula>
    <inlineHelpText>Specifies the billing behavior. Supported values for recurring items include Recurring or Recurring Prorated.</inlineHelpText>
    <label>JustOn: Billing Type</label>
    <type>Text</type>
</CustomField>