force-app/main/default/objects/OpportunityLineItem/fields/ON_BillingUnit__c.field-meta.xml
<CustomField>
    <fullName>ON_BillingUnit__c</fullName>
    <description>Defines the time unit for the billing period to be displayed on the invoice and which is used for the price calculation of the billing period. Supported values are Day, Month and Year.</description>
    <inlineHelpText>Defines the time unit for the billing period to be displayed on the invoice and which is used for the price calculation of the billing period. Supported values are Day, Month and Year.</inlineHelpText>
    <label>JustOn: Billing Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>