force-app/main/default/objects/OpportunityLineItem/fields/ON_Discount__c.field-meta.xml
<CustomField>
    <fullName>ON_Discount__c</fullName>
    <formula>Discount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JustOn: Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>