force-app/main/default/objects/OpportunityLineItem/fields/ON_EndDate__c.field-meta.xml
<CustomField>
    <fullName>ON_EndDate__c</fullName>
    <description>The date until which this item is active (may be empty)</description>
    <inlineHelpText>The date until which this item is active (may be empty)</inlineHelpText>
    <label>JustOn: End Date</label>
    <type>Date</type>
</CustomField>