force-app/main/default/objects/OpportunityLineItem/fields/ON_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ON_Quantity__c</fullName>
    <description>amount to be invoiced</description>
    <formula>Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>amount to be invoiced</inlineHelpText>
    <label>JustOn: Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>