force-app/main/default/objects/OpportunityLineItem/fields/ON_ServicePeriodStart__c.field-meta.xml
<CustomField>
    <fullName>ON_ServicePeriodStart__c</fullName>
    <description>Service Period Start</description>
    <formula>Opportunity.Contract_Start_Date__c</formula>
    <inlineHelpText>Service Period Start</inlineHelpText>
    <label>JustOn: ServicePeriodStart</label>
    <type>Date</type>
</CustomField>