force-app/main/default/objects/OpportunityLineItem/fields/ON_StartDate__c.field-meta.xml
<CustomField>
    <fullName>ON_StartDate__c</fullName>
    <description>The start date from which this item is active (may be empty)</description>
    <inlineHelpText>The start date from which this item is active (may be empty)</inlineHelpText>
    <label>JustON: Start Date</label>
    <type>Date</type>
</CustomField>