force-app/main/default/objects/OpportunityLineItem/fields/ON_TaxationRule__c.field-meta.xml
<CustomField>
    <fullName>ON_TaxationRule__c</fullName>
    <description>Set the Taxation Rule for the Invoice Line Item</description>
    <formula>&apos;End of Service Period&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set the Taxation Rule for the Invoice Line Item</inlineHelpText>
    <label>JustOn: TaxationRule</label>
    <type>Text</type>
</CustomField>