force-app/main/default/objects/OpportunityLineItem/fields/ON_Title__c.field-meta.xml
<CustomField>
    <fullName>ON_Title__c</fullName>
    <description>product title to name on invoice</description>
    <formula>PricebookEntry.Product2.Name</formula>
    <inlineHelpText>product title to name on invoice</inlineHelpText>
    <label>JustOn: Title</label>
    <type>Text</type>
</CustomField>