force-app/main/default/objects/OpportunityLineItem/fields/ON_Unit__c.field-meta.xml
<CustomField>
    <fullName>ON_Unit__c</fullName>
    <description>Specifies the product unit that is associated with this item. Required for creating E-Invoice.</description>
    <formula>TEXT(PricebookEntry.Product2.QuantityUnitOfMeasure)</formula>
    <inlineHelpText>Specifies the product unit that is associated with this item. Required for creating E-Invoice.</inlineHelpText>
    <label>JustOn: Unit</label>
    <type>Text</type>
</CustomField>