force-app/main/default/objects/OpportunityLineItem/fields/ON_UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>ON_UnitPrice__c</fullName>
    <description>Either the net or gross price of one unit of this item.</description>
    <formula>UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Either the net or gross price of one unit of this item.</inlineHelpText>
    <label>JustOn: UnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>