force-app/main/default/objects/OpportunityLineItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>RO-2005</description>
    <formula>QuoteLineItem.Product2.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>